manifests/overlays/local-kind/delete-orders-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-db
$patch: delete
