manifests/overlays/local-kind/delete-session-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
$patch: delete
