manifests/overlays/local-kind/delete-route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-end
$patch: delete
